--- a/sites/all/themes/s2015/sass/components/_download-pdf.scss
+++ b/sites/all/themes/s2015/sass/components/_download-pdf.scss
@@ -1,5 +1,6 @@
 .download-pdf-wrap {
     padding: 2rem !important;
+    margin: 2rem 0 !important;
 
     .left {
         float:left; 
@@ -13,6 +14,7 @@
         padding-right: 2rem;
         strong {
             display:block;
+            margin-bottom:0.5rem;
         }
     }
 
